--- a/xaml/Controls/Buttons.xaml
+++ b/xaml/Controls/Buttons.xaml
@@ -19,7 +19,7 @@
           Margin="20">
           <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
               <TextBlock Name="installText" 
-              Text="{Binding Install}" 
+              Text="{Binding Install, TargetNullValue=Install}" 
               Foreground="White" 
               Margin="0" 
               VerticalAlignment="Center"/>
@@ -48,7 +48,7 @@
             Margin="20">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <TextBlock Name="applyText" 
-                Text="{Binding Apply}" 
+                Text="{Binding Apply, TargetNullValue=Apply}" 
                 Foreground="White" 
                 Margin="0" 
                 VerticalAlignment="Center"/>
