--- a/xaml/Views/MainWindow.xaml
+++ b/xaml/Views/MainWindow.xaml
@@ -3,7 +3,7 @@
 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 x:Name="Window" 
-Title="Install Tweak Tool #StandWithPalestine" 
+Title="Install Tweak Tool" 
 WindowStartupLocation = "CenterScreen" 
 Background="{DynamicResource PrimaryBackgroundColor}"
 Height="700" Width="1000" 
