--- a/xaml/Controls/Catagory.xaml
+++ b/xaml/Controls/Catagory.xaml
@@ -3,6 +3,9 @@
     SelectedIndex="0" 
     Name="AppsCategory" 
     Grid.Column="0" 
+    VirtualizingStackPanel.IsVirtualizing="True"
+    VirtualizingStackPanel.VirtualizationMode="Recycling"
+    IsReadOnly="True"
     VerticalAlignment="Center" 
     HorizontalAlignment="Center" 
     Width="auto">
@@ -31,6 +34,9 @@
       SelectedIndex="0" 
       Name="TwaeksCategory" 
       Grid.Column="0" 
+      IsReadOnly="True"
+      VirtualizingStackPanel.IsVirtualizing="True"
+      VirtualizingStackPanel.VirtualizationMode="Recycling"
       VerticalAlignment="Center" 
       HorizontalAlignment="Center" 
       Visibility="Hidden"
