--- a/themes/Dark.xaml
+++ b/themes/Dark.xaml
@@ -3,7 +3,7 @@
 <ResourceDictionary x:Key="Dark">
  <SolidColorBrush x:Key="PrimaryBackgroundColor" Color="#2b2d31"/>
  <SolidColorBrush x:Key="SecondaryPrimaryBackgroundColor" Color="#3c3f44"/>
- <SolidColorBrush x:Key="PrimaryButtonForeground" Color="#098fd4" />
+ <SolidColorBrush x:Key="PrimaryButtonForeground" Color="#3c3f44" />
  <SolidColorBrush x:Key="PrimaryButtonHighlight" Color="White" />
  <SolidColorBrush x:Key="TextColorPrimary" Color="WhiteSmoke" />
  <SolidColorBrush x:Key="TextColorSecondaryColor" Color="White"/>
