--- a/static/Themes/Styles.xaml
+++ b/static/Themes/Styles.xaml
@@ -10,14 +10,14 @@
         <!-- Fade Out -->
         <DoubleAnimation
             Storyboard.TargetProperty="Opacity"
-            From="0.0" To="1.0"
-            Duration="0:0:01" /> <!-- Fade out duration -->
+            From="0.1" To="1.0"
+            Duration="0:0:01" />
         <!-- Fade In -->
         <DoubleAnimation
             Storyboard.TargetProperty="Opacity"
             From="1.0" To="0.0"
-            Duration="0:0:0.9"
-            BeginTime="0:0:05" /> <!-- Start fade in after 21 seconds -->
+            Duration="0:0:1"
+            BeginTime="0:0:10" /> 
     </Storyboard>
 <!--Logo Fade in-->
 <!-- Define the FadeOut and FadeIn animations with looping -->
