--- a/static/Themes/Styles.xaml
+++ b/static/Themes/Styles.xaml
@@ -395,8 +395,9 @@
                     <Border Name="Border" CornerRadius="5" BorderThickness="0" Padding="8" BorderBrush="Transparent"  Margin="10,5">
                         <ContentPresenter x:Name="ContentSite"
                         VerticalAlignment="Center"
-                        HorizontalAlignment="Left"
+                        HorizontalAlignment="Center"
                         ContentSource="Header"
+                        Width="80"
                         />
                     </Border>
                     <ControlTemplate.Triggers>
