--- a/xaml/Controls/Menu.xaml
+++ b/xaml/Controls/Menu.xaml
@@ -319,7 +319,7 @@
                         </MenuItem.Header>  
                     </MenuItem>
 
-                    <MenuItem Name="enhance">
+                    <MenuItem Name="efy">
                         <MenuItem.Header>
                             <Binding Path="null" TargetNullValue="Enhancer for YouTube"/>
                         </MenuItem.Header>
